--- a/items/templates/items/items_form.html
+++ b/items/templates/items/items_form.html
@@ -15,37 +15,25 @@
     <h1>{{ title }}</h1>
     
     <!-- Item já existe -->
-    {% if items.pk %}
+    {% if object.pk %}
 
-      <form method="POST">
-
+      <!-- Formulário de atualização -->
+      <form class="form" method="POST">
         {% csrf_token %}
 
-        {{ form.non_field_errors }}
-        
-        <!-- Renderização dos demais campos automaticamente -->
+        <!-- Renderiza os campos automaticamente -->
         {% for field in form %}
-          {% if field.name != 'category' and field.name != 'sub_category' %}
-            {{ field|as_crispy_field }}
-          {% endif %}
+          <div class="form-group">
+            {{ field.label_tag }}
+            {{ field }}
+          </div>
         {% endfor %}
 
-        <!-- Campo 'category' e 'sub-category' desativado manualmente -->
-        <div class = "form-group">
-          <label for = "{{ form.category.id_for_label }}"> Categoria </label>
-          <input type = "text" name = "{{ form.category.name }}" id = "{{ form.category.id_for_label }}" value = "{{ form.category.value }}" class = "form-control" readonly>
-        </div>
+        <button type="submit" class="btn btn-save">Atualizar</button>
+        <a href="{{ previous_page }}" class="btn btn-cancelar">Cancelar</a>
 
-        <div class = "form-group">
-          <label for = "{{ form.sub_category.id_for_label }}"> Sub-Categoria </label>
-          <input type = "text" name = "{{ form.sub_category.name }}" id = "{{ form.sub_category.id_for_label }}" value = "{{ form.sub_category.value }}" class = "form-control" readonly>
-        </div>
+    </form>
 
-        <button type = "submit" class = "btn btn-save"> Salvar </button>
-        <a href = "{% url "items_main" %}" class = "btn btn-cancelar"> Cancelar </a>
-
-      </form>
-    
     <!-- Item sendo criado -->
     {% else %}
 
