--- a/items/templates/items/pag_subs_category/items_informatica.html
+++ b/items/templates/items/pag_subs_category/items_informatica.html
@@ -34,13 +34,14 @@
                         <p><span>Unidades:</span> {{item.quantity}} Unidades</p>
                         <p><span>Marca:</span> {{item.brand}}</p>
                         <p><span>Modelo:</span> {{item.model}}</p>
+                        <p><span>Tombo(s):</span> {% for tombo in item.tombos.all %}{{ tombo.tombo }}{% endfor %}</p>
                       </div>
                     </div>
                     <div class="menu-container">
                       <button class="menu-btn" onclick="toggleMenuPagSub(event)">&#x22EE;</button>
                       <div class="menu-content" id="menuDropdown">
                         <a href="{% url 'items_ficha' id=item.id %}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
-                        <a href="{% url 'items_update' id=item.id %}" class="btn btn-edit">Editar</a>
+                        <a href="{% url 'items_update' item.pk %}" class="btn btn-edit">Editar</a>
                         <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
                         <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
                       </div>
@@ -73,13 +74,14 @@
                         <p><span>Unidades:</span> {{item.quantity}} Unidades</p>
                         <p><span>Marca:</span> {{item.brand}}</p>
                         <p><span>Modelo:</span> {{item.model}}</p>
+                        <p><span>Tombo(s):</span> {% for tombo in item.tombos.all %}{{ tombo.tombo }}{% endfor %}</p>
                       </div>
                     </div>
                     <div class="menu-container">
                       <button class="menu-btn" onclick="toggleMenuPagSub(event)">&#x22EE;</button>
                       <div class="menu-content" id="menuDropdown">
                         <a href="{% url 'items_ficha' id=item.id %}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
-                        <a href="{% url 'items_update' id=item.id %}" class="btn btn-edit">Editar</a>
+                        <a href="{% url 'items_update' item.pk %}" class="btn btn-edit">Editar</a>
                         <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
                         <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
                       </div>
@@ -112,13 +114,14 @@
                         <p><span>Unidades:</span> {{item.quantity}} Unidades</p>
                         <p><span>Marca:</span> {{item.brand}}</p>
                         <p><span>Modelo:</span> {{item.model}}</p>
+                        <p><span>Tombo(s):</span> {% for tombo in item.tombos.all %}{{ tombo.tombo }}{% endfor %}</p>
                       </div>
                     </div>
                     <div class="menu-container">
                       <button class="menu-btn" onclick="toggleMenuPagSub(event)">&#x22EE;</button>
                       <div class="menu-content" id="menuDropdown">
                         <a href="{% url 'items_ficha' id=item.id %}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
-                        <a href="{% url 'items_update' id=item.id %}" class="btn btn-edit">Editar</a>
+                        <a href="{% url 'items_update' item.pk %}" class="btn btn-edit">Editar</a>
                         <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
                         <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
                       </div>
@@ -151,13 +154,14 @@
                         <p><span>Unidades:</span> {{item.quantity}} Unidades</p>
                         <p><span>Marca:</span> {{item.brand}}</p>
                         <p><span>Modelo:</span> {{item.model}}</p>
+                        <p><span>Tombo(s):</span> {% for tombo in item.tombos.all %}{{ tombo.tombo }}{% endfor %}</p>
                       </div>
                     </div>
                     <div class="menu-container">
                       <button class="menu-btn" onclick="toggleMenuPagSub(event)">&#x22EE;</button>
                       <div class="menu-content" id="menuDropdown">
                         <a href="{% url 'items_ficha' id=item.id %}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
-                        <a href="{% url 'items_update' id=item.id %}" class="btn btn-edit">Editar</a>
+                        <a href="{% url 'items_update' item.pk %}" class="btn btn-edit">Editar</a>
                         <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
                         <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
                       </div>
@@ -190,13 +194,14 @@
                         <p><span>Unidades:</span> {{item.quantity}} Unidades</p>
                         <p><span>Marca:</span> {{item.brand}}</p>
                         <p><span>Modelo:</span> {{item.model}}</p>
+                        <p><span>Tombo(s):</span> {% for tombo in item.tombos.all %}{{ tombo.tombo }}{% endfor %}</p>
                       </div>
                     </div>
                     <div class="menu-container">
                       <button class="menu-btn" onclick="toggleMenuPagSub(event)">&#x22EE;</button>
                       <div class="menu-content" id="menuDropdown">
                         <a href="{% url 'items_ficha' id=item.id %}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
-                        <a href="{% url 'items_update' id=item.id %}" class="btn btn-edit">Editar</a>
+                        <a href="{% url 'items_update' item.pk %}" class="btn btn-edit">Editar</a>
                         <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
                         <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
                       </div>
@@ -229,13 +234,14 @@
                         <p><span>Unidades:</span> {{item.quantity}} Unidades</p>
                         <p><span>Marca:</span> {{item.brand}}</p>
                         <p><span>Modelo:</span> {{item.model}}</p>
+                        <p><span>Tombo(s):</span> {% for tombo in item.tombos.all %}{{ tombo.tombo }}{% endfor %}</p>
                       </div>
                     </div>
                     <div class="menu-container">
                       <button class="menu-btn" onclick="toggleMenuPagSub(event)">&#x22EE;</button>
                       <div class="menu-content" id="menuDropdown">
                         <a href="{% url 'items_ficha' id=item.id %}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
-                        <a href="{% url 'items_update' id=item.id %}" class="btn btn-edit">Editar</a>
+                        <a href="{% url 'items_update' item.pk %}" class="btn btn-edit">Editar</a>
                         <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
                         <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
                       </div>
