--- a/items/templates/items/pag_subs_category/items_material_instalacao.html
+++ b/items/templates/items/pag_subs_category/items_material_instalacao.html
@@ -32,6 +32,7 @@
                       <p><span>Unidades:</span> {{item.quantity}} Unidades</p>
                       <p><span>Marca:</span> {{item.brand}}</p>
                       <p><span>Modelo:</span> {{item.model}}</p>
+                      <p><span>Tombo(s):</span> {% for tombo in item.tombos.all %}{{ tombo.tombo }}{% endfor %}</p>
                     </div>
                   </div>
                   <div class="menu-container">
@@ -70,6 +71,7 @@
                       <p><span>Unidades:</span> {{item.quantity}} Unidades</p>
                       <p><span>Marca:</span> {{item.brand}}</p>
                       <p><span>Modelo:</span> {{item.model}}</p>
+                      <p><span>Tombo(s):</span> {% for tombo in item.tombos.all %}{{ tombo.tombo }}{% endfor %}</p>
                     </div>
                   </div>
                   <div class="menu-container">
@@ -108,6 +110,7 @@
                         <p><span>Unidades:</span> {{item.quantity}} Unidades</p>
                         <p><span>Marca:</span> {{item.brand}}</p>
                         <p><span>Modelo:</span> {{item.model}}</p>
+                        <p><span>Tombo(s):</span> {% for tombo in item.tombos.all %}{{ tombo.tombo }}{% endfor %}</p>
                       </div>
                     </div>
                     <div class="menu-container">
