Formulário de cadastro e atualização corrigidos

--- a/items/templates/items/base.html
+++ b/items/templates/items/base.html
@@ -30,6 +30,7 @@
   </header>
 
   <div class="menu-content-op" id="menu-content">
+    <a href="">Pesquisar</a>
     <a href="{% url 'itemsAuditLog' %}">Histórico</a>
     <a href="{% url 'items_dashboard' %}">Dashboard</a>
   </div>
@@ -38,6 +39,8 @@
     {% block content %}
     {% endblock %}
   </main>
+
+  <script src="{% static 'js/funcoes.js' %}"></script>
   
   {% block extra_scripts %}
   {% endblock %}
