Página de busca de itens cadastrados dentro do sistema atráves do nome

--- a/items/templates/items/base.html
+++ b/items/templates/items/base.html
@@ -30,7 +30,7 @@
   </header>
 
   <div class="menu-content-op" id="menu-content">
-    <a href="">Pesquisar</a>
+    <a href="{% url 'items_search' %}">Pesquisar</a>
     <a href="{% url 'itemsAuditLog' %}">Histórico</a>
     <a href="{% url 'items_dashboard' %}">Dashboard</a>
   </div>
