--- a/items/templates/items/pag_subs_category/items_informatica.html
+++ b/items/templates/items/pag_subs_category/items_informatica.html
@@ -40,9 +40,9 @@
                     <div class="menu-container">
                       <button class="menu-btn" onclick="toggleMenuPagSub(event)">&#x22EE;</button>
                       <div class="menu-content" id="menuDropdown">
-                        <a href="{% url 'items_ficha' id=item.id %}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
+                        <a href="{% url 'items_ficha'  item.pk%}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
                         <a href="{% url 'items_update' item.pk %}" class="btn btn-edit">Editar</a>
-                        <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
+                        <a href="{% url 'items_delete' item.pk %}" class="btn btn-delete">Excluir</a>
                         <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
                       </div>
                     </div> 
@@ -80,9 +80,9 @@
                     <div class="menu-container">
                       <button class="menu-btn" onclick="toggleMenuPagSub(event)">&#x22EE;</button>
                       <div class="menu-content" id="menuDropdown">
-                        <a href="{% url 'items_ficha' id=item.id %}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
+                        <a href="{% url 'items_ficha'  item.pk%}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
                         <a href="{% url 'items_update' item.pk %}" class="btn btn-edit">Editar</a>
-                        <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
+                        <a href="{% url 'items_delete' item.pk %}" class="btn btn-delete">Excluir</a>
                         <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
                       </div>
                     </div> 
@@ -120,9 +120,9 @@
                     <div class="menu-container">
                       <button class="menu-btn" onclick="toggleMenuPagSub(event)">&#x22EE;</button>
                       <div class="menu-content" id="menuDropdown">
-                        <a href="{% url 'items_ficha' id=item.id %}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
+                        <a href="{% url 'items_ficha'  item.pk%}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
                         <a href="{% url 'items_update' item.pk %}" class="btn btn-edit">Editar</a>
-                        <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
+                        <a href="{% url 'items_delete' item.pk %}" class="btn btn-delete">Excluir</a>
                         <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
                       </div>
                     </div> 
@@ -160,9 +160,9 @@
                     <div class="menu-container">
                       <button class="menu-btn" onclick="toggleMenuPagSub(event)">&#x22EE;</button>
                       <div class="menu-content" id="menuDropdown">
-                        <a href="{% url 'items_ficha' id=item.id %}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
+                        <a href="{% url 'items_ficha'  item.pk%}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
                         <a href="{% url 'items_update' item.pk %}" class="btn btn-edit">Editar</a>
-                        <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
+                        <a href="{% url 'items_delete' item.pk %}" class="btn btn-delete">Excluir</a>
                         <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
                       </div>
                     </div> 
@@ -200,9 +200,9 @@
                     <div class="menu-container">
                       <button class="menu-btn" onclick="toggleMenuPagSub(event)">&#x22EE;</button>
                       <div class="menu-content" id="menuDropdown">
-                        <a href="{% url 'items_ficha' id=item.id %}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
+                        <a href="{% url 'items_ficha'  item.pk%}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
                         <a href="{% url 'items_update' item.pk %}" class="btn btn-edit">Editar</a>
-                        <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
+                        <a href="{% url 'items_delete' item.pk %}" class="btn btn-delete">Excluir</a>
                         <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
                       </div>
                     </div> 
@@ -240,9 +240,9 @@
                     <div class="menu-container">
                       <button class="menu-btn" onclick="toggleMenuPagSub(event)">&#x22EE;</button>
                       <div class="menu-content" id="menuDropdown">
-                        <a href="{% url 'items_ficha' id=item.id %}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
+                        <a href="{% url 'items_ficha'  item.pk%}" class="btn btn-visualizar">Visualizar Ficha Tecnica</a>
                         <a href="{% url 'items_update' item.pk %}" class="btn btn-edit">Editar</a>
-                        <a href="{% url 'items_delete' id=item.id %}" class="btn btn-delete">Excluir</a>
+                        <a href="{% url 'items_delete' item.pk %}" class="btn btn-delete">Excluir</a>
                         <a href="{% url 'items_form_retirar' id=item.id %}" class="btn btn-retirar {% if item.quantity == 0 %} disabled {% endif %}" name="action" value="retirar">Retirar</a>
                       </div>
                     </div> 
