Atualizações no historico de ações

--- a/items/staticfiles/css/itemsAuditLog.css
+++ b/items/staticfiles/css/itemsAuditLog.css
@@ -1,14 +1,20 @@
 main {
-  padding: 20px;
+  padding: 40px;
   display: flex;
-  align-items: baseline;
+  align-items: center;
 }
 
 h1 {
   width: 100%;
   margin-top: 30px;
   text-align: center;
+  font-weight: 400;
   
+}
+
+.download-button {
+  width: 100%;
+  padding-left: 22px;
 }
 
 .download-button .btn {
@@ -23,24 +29,21 @@ h1 {
   background-color: #0056b3;
 }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-}
 
 thead th {
   background-color: #808b8ea5;
   color: white;
   font-size: 25px;
   padding: 10px;
-  text-align: left;
+  text-align: center;
+  font-weight: 500;
 }
 
 tbody td {
   font-size: 20px;
   padding: 10px;
   border-bottom: 1px solid #ddd;
+  text-align: center;
 }
 
 
