--- a/items/staticfiles/css/items_form_retirar.css
+++ b/items/staticfiles/css/items_form_retirar.css
@@ -1,45 +1,38 @@
 main {
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 10px 0;
 }
 
 .container {
-  height: 40%;
-  width: 80%;
   max-width: 900px;
   gap: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   box-shadow: 0px 1px 8px 8px rgba(0, 0, 0, 0.1);
   padding: 40px;
 }
 
 .container h1 {
-  font-size: 30px;
   margin-bottom: 20px;
   color: black;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .container p {
-  font-size: 20px;
+  font-size: 25px;
   margin-bottom: 10px;
 }
 
-.container p span{
-  font-weight: bold;
+.container p span {
+  font-weight: 600;
 }
 
 
 .form-group label {
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 20px;
+  font-weight: 500;
   color: black;
+  margin-top: 20px;
 }
 
 input[type="text"],
@@ -49,9 +42,14 @@ form .form-control {
   margin-top: 10px;
   border: 1px solid #ccc;
   border-radius: 3px;
-  box-sizing: border-box;
   padding: 10px;
   font-size: 18px;
+}
+
+.menu-btn {
+  display: flex;
+  justify-content: space-between;
+
 }
 
 main .btn,
@@ -68,13 +66,11 @@ main a {
 }
 
 main .btn-save {
-  background-color: green;
-  color: black;
+  width: 50%;
 }
 
 main .btn-cancelar {
-  background-color: red;
-  color: black;
+  width: 50%;
 }
 
 .error-list,
