--- a/items/templates/items/items_form_retirar.html
+++ b/items/templates/items/items_form_retirar.html
@@ -2,18 +2,38 @@
 
 {% load static %}
 
-{% block title %}Deletar de Itens{% endblock %}
+{% block title %}Retirada de Itens do Estoque{% endblock %}
 {% block extra_styles %}
   <link rel="stylesheet" href="{% static 'css/items_form_retirar.css' %}">
 {% endblock %}
 
 {% block content %} 
+
   <div class="container">
     <h1>Retirar item de estoque</h1>
     <p> Dentro de estoque possui {{items.quantity}} de unidades do item: <span>{{items.name}}</span></p>
     <div class="formulario">
       <form method="POST">
         {% csrf_token %}
+
+        <!-- Renderização Manual dos Campos do Formulário -->
+        <div class="form-group">
+
+          <label for="{{ form.quantity.id_for_label }}">Quantidade a Retirar</label>
+          {{ form.quantity }}
+
+          <label for="{{ form.quantity.id_for_label }}">Nova Localização do Item</label>
+          {{ form.location }}
+
+          {% if form.quantity.errors %}
+            <ul class="error-messages">
+              {% for error in form.quantity.errors %}
+                <li>{{ error }}</li>
+              {% endfor %}
+            </ul>
+          {% endif %}
+
+        </div>
 
         <!-- Bloco de Erros Personalizado -->
         {% if form.errors %}
@@ -26,22 +46,11 @@
           </div>
         {% endif %}
 
-        <!-- Renderização Manual dos Campos do Formulário -->
-        <div class="form-group">
-          <label for="{{ form.quantity.id_for_label }}">Quantidade a Retirar</label>
-          {{ form.quantity }}
-          {% if form.quantity.errors %}
-            <ul class="error-messages">
-              {% for error in form.quantity.errors %}
-                <li>{{ error }}</li>
-              {% endfor %}
-            </ul>
-          {% endif %}
+        <div class="menu-btn">
+          <button type = "submit" class = "btn btn-save"> Salvar </button>
+          <a href = "{{ previous_page }}" class = "btn btn-cancelar"> Cancelar </a>       
         </div>
 
-        <button type="submit" class="btn btn-save">Salvar</button>
-        <a href="{% url 'items_main' %}" class="btn btn-cancelar">Cancelar</a>
-        
       </form>
     </div>
   </div>
