--- a/items/templates/items/pag_subs_category/items_ferramentas.html
+++ b/items/templates/items/pag_subs_category/items_ferramentas.html
@@ -9,7 +9,7 @@
 
 {% block content %} 
   <div class="container">
-    <h1 class="titulo">Itens na Categoria: {{ request.resolver_match.kwargs.category }}s</h1>
+    <h1 class="titulo">Itens na Categoria: {{ request.resolver_match.kwargs.category }}S</h1>
     <h2>Sub-Categorias: </h2>
 
     {% if item_ferramenta_list %}
