--- a/items/staticfiles/css/base.css
+++ b/items/staticfiles/css/base.css
@@ -40,8 +40,6 @@ header a {
   border-radius: 10px;
 }
 
-
-
 header .button_logout {
   background-color: red;
   border-radius: 5px;
@@ -58,14 +56,13 @@ header .button_logout {
   z-index: 1;
 }
 
-.menu-content-op {
-  height: 60px;
+.menu {
   align-content: center;
   background-color: #f0f0f0;
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
 }
 
-.menu-content-op a {
+.menu a {
   padding: 10px;
   font-size: 18px;
   font-weight: bold;
@@ -80,6 +77,32 @@ main {
   align-items: center;
   margin: 10px 0;
   height: auto;
+}
+
+.form-search {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+}
+
+.form-search input[type="text"] {
+  width: 100%;
+  height: 45px;
+  padding: 10px;
+}
+
+.form-search .btn-save {
+  width: 100%;
+  margin-bottom: 0;
+  
+}
+
+.form-search a {
+  height: 45px;
+  width: 100%;
+  border: 1px solid black;
 }
 
 main .btn,
