--- a/items/templates/items/base.html
+++ b/items/templates/items/base.html
@@ -35,7 +35,7 @@
   </header>
   
 
-  <div class="menu-content-op" id="menu-content">
+  <div class="menu">
     <a href="{% url 'items_search' %}">Pesquisar</a>
     <a href="{% url 'itemsAuditLog' %}">Histórico</a>
     <a href="{% url 'items_dashboard' %}">Dashboard</a>
